# deepracer_simulation

./: CMakeLists.txt  README.md  posicionesPistas.txt  setup_deepracer.sh
deepracer_simulation/: package.xml
launch/: create_model.launch  racecar.launch  racetrack_with_controller.launch  racetrack_with_racecar.launch  train.launch  try.launch
models/2022_april_open/: 2022_april_open_model.sdf
models/2022_march_open/: 2022_march_open_model.sdf
models/2022_october_open/: 2022_october_open_model.sdf
models/2022_october_pro/: 2022_october_pro_model.sdf
models/Aragon/: Aragon_model.sdf  model.config
scripts/: deepracer_env.py  servo_commands.py  train.py
train/: ackermann_controller.py  create_model.py  deepracer_env.py  plotStats.py  plotTraj.py  processDAE.py  train.py  try.py  waypoints.csv
urdf/: macros.xacro  racecar.gazebo  racecar.xacro
worlds/: 2022_april_open.world  2022_march_open.world  2022_october_open.world  2022_october_pro.world  Aragon.world
